--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,8 @@
-== README
+Kayla Morrison's Rails Portfolio
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Description
+a place to store the fruits of my Rails adventure
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+![My image](https://dl.dropboxusercontent.com/u/257144768/Screen%20Shot%202014-01-14%20at%204.40.30%20PM.png)
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
