write readme in html

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,9 +1,11 @@
-Kayla Morrison's Rails Portfolio
+<h1>Kayla Morrison's Rails Portfolio</h2>
 
-Description
+<h3>Description</h3>
 a place to store the fruits of my Rails adventure
 
-![ScreenShot](https://dl.dropboxusercontent.com/u/257144768/Screen%20Shot%202014-01-14%20at%204.40.30%20PM.png)
+<img src="https://dl.dropboxusercontent.com/u/257144768/Screen%20Shot%202014-01-14%20at%204.40.30%20PM.png">
+
+
 
 
 
