--- a/README.rdoc
+++ b/README.rdoc
@@ -1,11 +1,23 @@
-<h1>Kayla Morrison's Rails Portfolio</h2>
+# Kayla Morrison's Rails Portfolio
+<!-- If you'd like to use a logo instead uncomment this code and remove the text above this line
 
-<h3>Description</h3>
-a place to store the fruits of my Rails adventure
+  ![Logo](URL to logo img file goes here)
 
-<img src="https://dl.dropboxusercontent.com/u/257144768/Screen%20Shot%202014-01-14%20at%204.40.30%20PM.png">
+-->
 
+By [Kayla Morrison](author URL goes here).
 
+[![Code Climate](Code Climate Badge IMG URL goes here)](Code Climate URL goes here)
 
+##Kayla Morrison's Rails Portfolio** a place to store the fruits of my Rails adventure
 
+## Information
 
+Screenshots of your application below:
+
+![Screenshot 1](https://dl.dropboxusercontent.com/u/257144768/Screen%20Shot%202014-01-14%20at%204.40.30%20PM.png)
+
+## Authors
+
+* Kayla Morrison (https://github.com/kaxla)
+* Readme template by Stephanie Hekker(https://github.com/stephzilla)
