--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,11 @@
 
 en:
   hello: "Hello world"
+
+  time:
+    formats:
+      default: "%d/%m/%Y %H:%M:%S %z"
+      short: "%e %B, %H:%M on the clock"
+      long: "%B %d, %Y %H:%M"
+  posts:
+    title: "Posts"
